<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShiftManagementDMActivity">

    <Spinner
        android:id="@+id/role_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Select Work Role"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/student_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Select Student"
        app:layout_constraintTop_toBottomOf="@id/role_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/location_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/student_spinner"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/location_commons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Commons" />

        <RadioButton
            android:id="@+id/location_withe_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Withe Connection" />
    </RadioGroup>

    <!-- Changed to reference the RadioGroup -->
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />  <!-- Added end constraint -->

    <TextView
        android:id="@+id/start_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:background="@android:color/holo_blue_light"
        android:padding="16dp"
        android:text="@string/select_start_time"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/location_radio_group" tools:layout_editor_absoluteX="2dp"/>
    <!-- Added end constraint -->

    <TextView
        android:id="@+id/end_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_blue_light"
        android:padding="16dp"
        android:text="@string/select_end_time"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/start_time_text"/>
    <Button
        android:id="@+id/submit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_shift"
        app:layout_constraintTop_toBottomOf="@id/end_time_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- Bottom Navigation View -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itemBackground="@color/purple_200"
        app:itemIconTint="@color/colorPrimary"
        app:itemTextColor="@color/black"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
